package Diseases;

public enum DiseaseType{
    LEGILL,
    HEALTHY,
    UNDEFINED;
}
