package Diseases;

public class Healthy extends Disease{
     public Healthy() {
        super(DiseaseType.HEALTHY, 0, "Здоров");
    }
}
