package Diseases;

public class LegIll extends Disease{
    public LegIll(int degree) {
        super(DiseaseType.LEGILL, degree, "Боль в ноге");
    }
}
