package Diseases;

public class Undefined extends Disease{
    public Undefined() {
        super(DiseaseType.UNDEFINED, 0, "Не определено");
    }
}
