package Humans;

import Items.Readable;
import Places.Hospital;
import Places.Place;

public interface AbleToImpact {
    public String impact(Hospital hospital, Human human);
}
