package Humans;

public interface Angry {
    public void tearingHair();
}
