package Humans;

import Diseases.Disease;
import Items.Readable;
import Places.Place;

public interface Endured {
    public void endure();
}
