package Humans;

import Diseases.Undefined;
import Places.Hospital;

public class Rasteryayka extends Human{
    public Rasteryayka() {
        super("Растеряйка", new Undefined(), new Hospital("Больница"));
    }
}
