package Items;

public interface Readable {
    public String getText();
}
