package Items;

public enum ReadableType {
        LIST;
}
