package Places;

public class Freedom extends Place{

    public Freedom() {
        super(PlaceType.FREEDOM, "Свобода");
    }
}
