package Places;

public enum PlaceType {
    FREEDOM,
    HOSPITAL;
}
